# lemma

./: .gitignore  Cargo.toml  README.md
content/: concepts.toml  strategies.toml
content/tracks/calculus/: calc-01-limits.toml  calc-02-derivatives.toml  calc-03-integrals.toml  calc-04-chain-rule.toml  calc-05-taylor-series.toml  calc-06-multivariable.toml  calc-07-optimisation.toml  calc-08-differential-equations.toml  calc-09-convergence.toml  calc-10-stochastic-calculus.toml  calc-11-calculus-of-variations.toml  calc-12-functional-analysis.toml  calc-13-information-geometry.toml
content/tracks/discrete-maths/: dm-01-counting.toml  dm-02-graphs.toml  dm-03-modular-arithmetic.toml  dm-04-recurrences.toml  dm-05-inclusion-exclusion.toml  dm-06-trees.toml  dm-07-euler-hamilton.toml  dm-08-generating-functions-discrete.toml  dm-09-ramsey.toml  dm-10-cryptography.toml  dm-11-error-correction.toml  dm-12-complexity.toml  dm-13-formal-languages.toml
content/tracks/linear-algebra/: 01-vectors-and-spaces.toml  02-linear-transformations.toml  03-determinants.toml  04-systems-of-equations.toml  05-eigenvalues.toml  06-inner-products.toml  07-least-squares.toml  08-matrix-decompositions.toml  09-svd.toml  10-pca.toml  11-spectral-theorem.toml  12-tensors.toml  (+1 more)
crates/content/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: assessment.rs  grading.rs  lib.rs  problem.rs  store.rs  strategy.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
scripts/: record_demo.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.svelte
(+15 files in other folders)
