[package]
name = "lemma_server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lemma"
path = "src/main.rs"

[dependencies]
lemma_core = { path = "../core" }
lemma_content = { path = "../content" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
